kubernetes/apps/nexotv-transcoder/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexotv-transcoder
  namespace: stremio
  labels:
    app: nexotv-transcoder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexotv-transcoder
  template:
    metadata:
      labels:
        app: nexotv-transcoder
    spec:
      containers:
      - name: transcoder
        image: docker.io/alialjaffer/nexotv-transcoder:latest
        ports:
        - containerPort: 7001
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
            gpu.intel.com/i915: "1"
          limits:
            cpu: "2"
            memory: 2Gi
            gpu.intel.com/i915: "1"
