kubernetes/apps/nexotv-transcoder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexotv-transcoder
  namespace: stremio
spec:
  selector:
    app: nexotv-transcoder
  ports:
  - port: 7001
    targetPort: 7001
