kubernetes/apps/nexotv-transcoder/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexotv-transcoder
  namespace: stremio
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: homelab-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - nexotv.alialjaffer.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /playlist.m3u8
    - path:
        type: PathPrefix
        value: /segment.ts
    backendRefs:
    - name: nexotv-transcoder
      port: 7001
